<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/review_background"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/reviewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_content"
            android:textColor="@color/review_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:padding="16dp" />

        <TextView
            android:id="@+id/reviewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_feedback"
            android:textColor="@color/review_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_button_text"
            android:layout_gravity="center"
            android:backgroundTint="@color/button_primary"
            android:textColor="@color/button_text"
            android:padding="12dp" />

    </LinearLayout>

</ScrollView>